[gd_scene load_steps=12 format=3 uid="uid://bvl3fckfr7wmc"]

[ext_resource type="Script" uid="uid://j8d0p0gjubmo" path="res://script/stages.gd" id="1_e4kdv"]
[ext_resource type="Texture2D" uid="uid://c35hn62440wwb" path="res://Icons/Example Forest.png" id="1_jwjy4"]
[ext_resource type="Texture2D" uid="uid://g80sbymdis4" path="res://Icons/oldtv-removebg-preview.png" id="2_1ljdq"]
[ext_resource type="Texture2D" uid="uid://bpu0ik55tbqft" path="res://Icons/play-button-arrowhead.png" id="2_ltddd"]
[ext_resource type="FontFile" uid="uid://dyar6fh26gmft" path="res://Fonts/Inter Extra Bold 800.otf" id="3_4xxmh"]
[ext_resource type="Texture2D" uid="uid://bjtkyxg3y3d8i" path="res://Icons/Cartoon_Clock_Clipart_PNG_Images__Clock_Vector_Cartoon__Clock__Png__Grey_Clock_PNG_Image_For_Free_Download-removebg-preview.png" id="4_gookl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a5pmv"]
bg_color = Color(0.785003, 0.645615, 0.676083, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rului"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5i7w4"]
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
expand_margin_left = 10.0
expand_margin_top = 3.0
expand_margin_right = 10.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_22lar"]
bg_color = Color(0.231373, 0.231373, 0.231373, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
expand_margin_left = 10.0
expand_margin_top = 3.0
expand_margin_right = 10.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o4tic"]
bg_color = Color(0.43385, 0.236056, 1.92523e-07, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[node name="Stages" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e4kdv")

[node name="Panel3" type="Panel" parent="."]
layout_mode = 0
offset_left = -15.0
offset_top = -4.0
offset_right = 1299.0
offset_bottom = 737.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a5pmv")

[node name="PictureHolder" type="Panel" parent="."]
layout_mode = 0
offset_left = 564.0
offset_top = 231.0
offset_right = 861.0
offset_bottom = 459.0

[node name="TextureRect" type="TextureRect" parent="PictureHolder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_jwjy4")
expand_mode = 1

[node name="Oldtv-removebg-preview" type="Sprite2D" parent="."]
position = Vector2(772, 318)
scale = Vector2(1.38333, 1.38333)
texture = ExtResource("2_1ljdq")

[node name="StageLevel" type="Label" parent="."]
layout_mode = 0
offset_left = 254.0
offset_top = 270.0
offset_right = 397.0
offset_bottom = 307.0
theme_override_fonts/font = ExtResource("3_4xxmh")
theme_override_font_sizes/font_size = 30
text = "STAGE - 1"

[node name="StageTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 254.0
offset_top = 309.0
offset_right = 397.0
offset_bottom = 346.0
theme_override_fonts/font = ExtResource("3_4xxmh")
theme_override_font_sizes/font_size = 23
text = "The Forest"

[node name="SelectButton" type="Button" parent="."]
layout_mode = 0
offset_left = 255.0
offset_top = 358.0
offset_right = 483.0
offset_bottom = 411.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_rului")
theme_override_styles/hover = SubResource("StyleBoxFlat_5i7w4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_22lar")
text = "SELECT
"

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = -15.0
offset_top = 522.0
offset_right = 1299.0
offset_bottom = 737.0
theme_override_styles/panel = SubResource("StyleBoxFlat_o4tic")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -15.0
offset_top = 503.0
offset_right = 1299.0
offset_bottom = 562.0
theme_override_styles/panel = SubResource("StyleBoxFlat_o4tic")

[node name="CartoonClockClipartPngImagesClockVectorCartoonClockPngGreyClockPngImageForFreeDownload-removebg-preview" type="Sprite2D" parent="."]
position = Vector2(1209, 63)
texture = ExtResource("4_gookl")

[node name="NextButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1129.0
offset_top = 335.0
offset_right = 1191.0
offset_bottom = 398.0
theme_override_constants/icon_max_width = 20
theme_override_icons/icon = ExtResource("2_ltddd")
icon_alignment = 1

[node name="PreviousButton" type="Button" parent="."]
layout_mode = 0
offset_left = 155.0
offset_top = 398.0
offset_right = 217.0
offset_bottom = 461.0
rotation = 3.14159
theme_override_constants/icon_max_width = 20
theme_override_icons/icon = ExtResource("2_ltddd")
icon_alignment = 1

[node name="backButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1093.0
offset_top = 583.0
offset_right = 1233.0
offset_bottom = 636.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_rului")
theme_override_styles/hover = SubResource("StyleBoxFlat_5i7w4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_22lar")
text = "BACK
"

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1093.0
offset_top = 643.0
offset_right = 1233.0
offset_bottom = 696.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_rului")
theme_override_styles/hover = SubResource("StyleBoxFlat_5i7w4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_22lar")
text = "MAIN MENU
"

[connection signal="pressed" from="SelectButton" to="." method="_on_select_button_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="backButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
